; ModuleID = '/home/carl/AnghaBench/poco/Foundation/wcelibcex-1.0/src/extr_wce_timesys.c_wceex_local_to_time_r.c'
source_filename = "/home/carl/AnghaBench/poco/Foundation/wcelibcex-1.0/src/extr_wce_timesys.c_wceex_local_to_time_r.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32, i32, i32, i32, i32, i32, i64, i64, i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wceex_local_to_time_r(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.tm, align 8
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %14 = bitcast %struct.tm* %13 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %14, i8 0, i64 56, i1 false)
  %15 = load i32, i32* %7, align 4
  %16 = getelementptr inbounds %struct.tm, %struct.tm* %13, i32 0, i32 0
  store i32 %15, i32* %16, align 8
  %17 = load i32, i32* %8, align 4
  %18 = getelementptr inbounds %struct.tm, %struct.tm* %13, i32 0, i32 1
  store i32 %17, i32* %18, align 4
  %19 = load i32, i32* %9, align 4
  %20 = getelementptr inbounds %struct.tm, %struct.tm* %13, i32 0, i32 2
  store i32 %19, i32* %20, align 8
  %21 = load i32, i32* %10, align 4
  %22 = getelementptr inbounds %struct.tm, %struct.tm* %13, i32 0, i32 3
  store i32 %21, i32* %22, align 4
  %23 = load i32, i32* %11, align 4
  %24 = getelementptr inbounds %struct.tm, %struct.tm* %13, i32 0, i32 4
  store i32 %23, i32* %24, align 8
  %25 = load i32, i32* %12, align 4
  %26 = getelementptr inbounds %struct.tm, %struct.tm* %13, i32 0, i32 5
  store i32 %25, i32* %26, align 4
  %27 = getelementptr inbounds %struct.tm, %struct.tm* %13, i32 0, i32 8
  store i64 0, i64* %27, align 8
  %28 = getelementptr inbounds %struct.tm, %struct.tm* %13, i32 0, i32 7
  store i64 0, i64* %28, align 8
  %29 = getelementptr inbounds %struct.tm, %struct.tm* %13, i32 0, i32 6
  store i64 0, i64* %29, align 8
  %30 = call i32 @wceex_mktime(%struct.tm* %13)
  ret i32 %30
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @wceex_mktime(%struct.tm*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
